sets fixed time to think (connection sustained for this fixed time)
- randomNumber() ends up being a string? not sure how to inject a number
  in the params...

--- a/client/connection-only.yml
+++ b/client/connection-only.yml
@@ -21,4 +21,4 @@
     - name: "lurker who just connects"
       engine: "ws"
       flow:
-        - think: "{{ $processEnvironment.TEST_SUSTAINED }}"
+        - think: 180
